syntax = "proto3";

package greet;

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

message GreetManyRequest {
    Greeting greeting = 1;
}

message GreetManyResponse {
    string result = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}

service GreetService {
    // unary api
    rpc Greet(GreetRequest) returns (GreetResponse) {}

    // server stream api
    rpc GreetMany(GreetManyRequest) returns (stream GreetManyResponse) {}

    // client stream api
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {}
}